--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
             display: block;
             word-break: break-all;
             cursor: pointer;
+            white-space: pre-wrap; /* 允许换行 */
         }
 
         .file-action {
